<resources>
    <string name="app_name">Roamu</string>
    <string name="google_android_map_api_key" translatable="false">AIzaSyCa3yhDGMZM2xHCc5ieYeyz87SuHYDzozU</string>
    <string name="mapboxkey">pk.eyJ1IjoiaWNhbnN0dWRpb3oiLCJhIjoiY2oyMXQ3dGRpMDAwdDJ3bXpmZHRkdTBtNyJ9.PxslIcrVRj_gVgiv-Y-jog</string>
    <string name="direction_request">Direction Requesting........</string>
    <string name="request_ride">Request Ride</string>
    <string name="merchant_privacy">https://www.example.com/privacy</string>
    <string name="merchant_user_agreement">https://www.example.com/legal</string>
    <string name="merchant_name">Taxi App</string>
    <string name="paypal_payment_currency">USD</string>
    <string name="cash_on_hand">Request Cash On Hand to driver</string>
    <string name="contact_admin">There is some problem. please contact your administrator.</string>
    <string name="success_login">Welcome to </string>
    <string name="payment_update">Payment Updated</string>
    <string name="ride_request_completed">ride request completed</string>
    <string name="ride_request_cancelled">ride request cancelled</string>
    <string name="old_pws_is_required">old password is required</string>
    <string name="relogin">Re-login and try again</string>
    <string name="select_driver">tap driver info</string>
    <string name="invalid_fare">invalid fare</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="invalid_distance">invalid distance</string>
    <string name="invalid_pickupaddress">invalid pickup address</string>
    <string name="invalid_dropaddress">invalid drop address</string>
    <string name="invalid_pickuplocation">invalid pickup location</string>
    <string name="invalid_droplocation">invalid drop location</string>
    <string name="ride_has_been_requested">Ride has been requested</string>
    <string name="error_payment">Error while updating  payment</string>
    <string name="server_not_respond">server didn\'t response</string>
    <string name="payment_method">Choose Payment method</string>
    <string name="want_to_cancel">Do you want to cancel your accepted ride?</string>
    <string name="want_to_accept">Do you want to complete your accepted ride?</string>
    <string name="ride_request_cancellation">RIDE UPDATE</string>
    <string name="FROM">FROM</string>
    <string name="DRIVERNAME">DRIVER NAME</string>
    <string name="pickup_location">"From"</string>
    <string name="drop_location">"To"</string>
    <string name="namee">"Name"</string>
    <string name="drivername">"Driver Number"</string>
    <string name="mobile_numberr">"Mobile Number       "</string>
    <string name="CUSTOMERNAME">CUSTOMER NAME</string>
    <string name="nodata_found">No Data Found</string>
    <string name="REQUEST_RIDE">REQUEST RIDE</string>
    <string name="Login">Login</string>
    <string name="create_ac">Create an Account</string>
    <string name="pwd_reset_instruction">Enter your registered email address ,We will send you an email to reset your password</string>
    <string name="register_hint">Registered Email</string>
    <string name="new_pwd">new password</string>
    <string name="INVALID_DISTANCE">INVALID DISTANCE</string>
    <string name="make_payment">Make Payment</string>
    <string name="taxigo">TexiGO</string>
    <string name="fare">"Fare       "</string>
    <string name="ride_request">Ride Request</string>
    <string name="vehicle_name">"Vehicle Name       "</string>
    <string name="select_pickup_location">select pickup location</string>
    <string name="select_drop_location">select drop location</string>
    <string name="Track_Driver">Track Driver</string>
    <string name="Track_Ride">Track Ride</string>
    <string name="driver">Driver</string>
    <string name="logout">Log out</string>
    <string name="search_box">Search</string>
    <string name="clear">clear</string>
    <string name="exit">close</string>
    <string-array name="payment_mode">
        <item>Cash on hand [to driver]</item>
        <item>pay via Paypal</item>
    </string-array>
    <string name="no_data_found">data Not found</string>
    <string name="terms_amp_conditions">term ANd COndtions</string>
    <string name="msg_no_internet">No internet Connection</string>
    <string name="QIBus_softui_contentDescription">TODO</string>
    <string name="QIBus_softui_txt_todo">TODO</string>
    <string name="QIBus_softui_txt_high_hill_manali">High Hill Manali</string>
    <string name="QIBus_softui_txt_4_days_3_nights">4 Days 3 Nights</string>
    <string name="QIBus_softui_txt_new_package">New Packages</string>
    <string name="QIBus_softui__500"><strike>$ 500</strike></string>
    <string name="QIBus_softui_txt_03_bus_available">4 Bus Available</string>
    <string name="QIBus_softui_text_seat">Seat</string>
    <string name="QIBus_softui_msg_shareapp">Hey check out my app at: https://play.google.com/store/apps/developer?id=IQONIC+Design</string>
    <string name="QIBus_softui_send_to">Share using</string>
    <string name="QIBus_softui_txtYourCode">Your code:</string>
    <string name="QIBus_softui_txtTotalEarning">Total Earning</string>
    <string name="QIBus_softui_txt_your_link">Your Link :</string>
    <string name="QIBus_softui_text_get_100_when_your_friend_complete_trip_with_us">Get $100 when your friend completes a trip with us</string>
    <string name="QIBus_softui_hint_enter_your_contact_number">Enter Contact Number</string>
    <string name="QIBus_softui_lbl_email">Email :</string>
    <string name="QIBus_softui_txt_emailid">John@gmail.com</string>
    <string name="QIBus_softui_lbl_wallet">Refer friends, Earn wallet money</string>
    <string name="QIBus_softui_lbl_your_wallet_in_balance">Your Balance in the wallet</string>
    <string name="QIBus_softui_txt_visa">VISA</string>
    <string name="QIBus_softui_title_price">Price</string>
    <string name="QIBus_softui_text_confirmed">Confirmed</string>
    <string name="QIBus_softui_text_destination">Ahmedabad (Guj) To High Hill,Manali</string>
    <string name="QIBus_softui_hint_from_city">From City</string>
    <string name="QIBus_softui_hint_to_city">To City</string>
    <string name="QIBus_softui_txt_view_all">View all</string>
    <string name="QIBus_softui_txt_new_offers">New Offers</string>
    <string name="QIBus_softui_txt_popular_package">Popular Packages</string>
    <string name="QIBus_softui_title_email_notification_settings">Email Notification Settings</string>
    <string name="QIBus_softui_txt_email_notification">Email Notification</string>
    <string name="QIBus_softui_lbl_contact_number_settings">Contact Number Notification Settings</string>
    <string name="QIBus_softui_lbl_mobile_no">Mobile No :</string>
    <string name="QIBus_softui_lbl_number_notification">Number Notification</string>
    <string name="QIBus_softui_title_language_setting">Language Settings</string>
    <string name="QIBus_softui_lbl_language">Language :</string>
    <string name="QIBus_softui_txt_english_us">English-US</string>
    <string name="QIBus_softui_lbl_first_name">First Name :</string>
    <string name="QIBus_softui_lbl_last_name">Last Name :</string>
    <string name="QIBus_softui_lbl_gender">Gender :</string>
    <string name="QIBus_softui_title_edit_your_name">Edit Your Name</string>
    <string name="QIBus_softui_title_edit_your_contact">Edit Your Contact</string>
    <string name="QIBus_softui_lbl_total_fare">Total Fare</string>
    <string name="QIBus_softui_lbl_pnr_no">PNR No</string>
    <string name="QIBus_softui_txt_busTime">18:00</string>
    <string name="QIBus_softui_txt_time">8:00</string>
    <string name="QIBus_softui_txt_date">28-May-2019</string>
    <string name="QIBus_softui_title_toolbar_cards">Cards</string>
    <string name="QIBus_softui_hint_enter_your_emailId">Enter Your Email Id</string>
    <string name="QIBus_softui_txt_samay_travel_main_office">Samay Travel Main Office</string>
    <string name="QIBus_softui_txt_near_alim_chowk_manali">Near Alim Chowk,Manali</string>
    <string name="QIBus_softui_txt_ticket_no">Ticket No</string>
    <string name="QIBus_softui_msg_email_required">Email required</string>
    <string name="QIBus_softui_msg_email_valid">Enter Valid Email</string>
    <string name="QIBus_softui_msg_first_name">First name required</string>
    <string name="QIBus_softui_msg_last_name">Last name required</string>
    <string name="QIBus_softui_msg_mobile_number">Mobile number required</string>
    <string name="QIBus_softui_msg_email_id">Email Id required</string>
    <string name="QIBus_softui_hint_email">Enter Email ID</string>
    <string name="QIBus_softui_ahmedabad_guj_high_hill_manali">Ahmedabad(Guj)- High Hill,Manali,Gujarat India</string>
    <string name="QIBus_softui_volvo_bus">Volvo Bus</string>
    <string name="QIBus_softui_txtCancelled">Cancelled</string>
    <string name="QIBus_softui_txtColon">:</string>
    <string name="QIBus_softui_search">Search</string>
    <string name="QIBus_softui_lbl_special">SPECIAL</string>
    <string name="QIBus_softui_lbl_use_code">Use Code:</string>
    <string name="QIBus_softui_lbl_notification">Notification</string>
    <string name="QIBus_softui_lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="QIBus_softui_txt_verify">Verify</string>
    <string name="QIBus_softui_txt_Resend">Re-send</string>
    <string name="QIBus_softui_lbl_StarRatings">Star Ratings</string>
    <string name="QIBus_softui_txt_BusType">Bus Type</string>
    <string name="QIBus_softui_lbl_Apply">Apply</string>
    <string name="QIBus_softui_text_you_want_to">Welcome to</string>
    <string name="QIBus_softui_text_travel">QIBUS</string>
    <string name="QIBus_softui_hint_mobile">Mobile Number</string>
    <string name="QIBus_softui_lbl_continue">Continue</string>
    <string name="QIBus_softui_text_signInwith">Sign In With</string>
    <string name="QIBus_softui_verification">Verification</string>
    <string name="QIBus_softui_refere_and_earn">Refer &amp; Earn</string>
    <string name="QIBus_softui_profile_settings">Edit Profile</string>
    <string name="QIBus_softui_lbl_profile_settings">Edit Profile</string>
    <string name="QIBus_softui_lbl__wallet">Wallet</string>
    <string name="QIBus_softui_lbl_cards">Cards</string>
    <string name="QIBus_softui__1">1</string>
    <string name="QIBus_softui_text_yes">Yes</string>
    <string name="QIBus_softui_text_no">No</string>
    <string name="QIBus_softui_text_when_you_want_to_go">When you want to go?</string>
    <string name="English">English</string>
    <string name="arabic">Arabic</string>
    <string name="lang">Language</string>
    <string name="platform" translatable="false">Social Media Platform</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="cancelled_request">Cancelled Request</string>
    <string name="completed_request">Completed Request</string>
    <string name="log_out">Log out</string>
    <string name="Pending_Requests">Pending Requests</string>
    <string name="promocodes">Discount</string>
    <string name="cancel">Cancel</string>
    <string name="about_uss">About US</string>
    <string name="smoking">smoked</string>
    <string name="Travel_time">Travel Time</string>
    <string name="passenger_one">1 Passenger</string>
    <string name="find_travel">Find Car</string>
    <string name="add_travel">Save</string>
    <string name="privacy_menu">Privacy And Policy</string>
    <string name="enter_number_of_passengers_trip_price">Enter number of passengers, trip price</string>
    <string name="number_of_passengers_1">Number of Passengers, 1</string>
    <string name="trip_price">Trip Price</string>
    <string name="submit">Submit</string>
    <string name="CheckBox">Add To Platform </string>
</resources>