<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/home"></item>
    <item
        android:id="@+id/pending_requests"
        android:icon="@mipmap/ic_hourglass_empty_black_24dp"
        android:title="@string/Pending_Requests"></item>

    <item
        android:id="@+id/accepted_requests"
        android:icon="@mipmap/ic_hourglass_full_black_24dp"
        android:title="@string/accepted_request"></item>

    <item
        android:id="@+id/completed_rides"
        android:icon="@mipmap/ic_thumb_up_black_24dp"
        android:title="@string/completed_request"></item>
    <item
        android:id="@+id/cancelled"
        android:icon="@mipmap/ic_cancel_black_24dp"
        android:title="@string/cancelled_request"></item>
    <item
        android:id="@+id/profile"
        android:icon="@mipmap/ic_account_circle_black_24dp"
        android:title="@string/profile"></item>
    <item
        android:id="@+id/promo"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/promocodes"></item>
    <item
        android:id="@+id/about_us"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/about_uss"></item>
    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/ic_enhanced_encryption_black_24dp"
        android:title="@string/privacy_menu"></item>
    <item
        android:id="@+id/lang"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/lang"></item>

    <item
        android:id="@+id/platform"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/platform"></item>

    <item
        android:id="@+id/logout"
        android:icon="@mipmap/ic_power_settings_new_black_24dp"
        android:title="@string/log_out"></item>
</menu>