<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/enter_number_of_passengers_trip_price"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/number_of_passengers_1"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/trip_price"
        android:inputType="numberDecimal"
        android:visibility="invisible" />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CheckBox" />

    <Button
        android:id="@+id/btnSubmitDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/quantum_yellow700"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnCancelDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/quantum_yellow700"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

</LinearLayout>
