<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"

    android:padding="20dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_value"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/input"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
             />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/smoke_lyner"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/smoking"
            android:layout_height="match_parent"/>
    <RadioButton
        android:layout_width="60dp"
        android:id="@+id/yes"
        android:layout_height="match_parent"
        android:text="@string/QIBus_softui_text_yes"/>
        <RadioButton
            android:layout_width="60dp"
            android:id="@+id/no"
            android:layout_height="match_parent"
            android:text="@string/QIBus_softui_text_no"/>

    </LinearLayout>
</LinearLayout>

