<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layoutDirection="ltr"
    tools:context=".fragement.lang">

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lang" />

    <Button
        android:id="@+id/b1en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label1"
        android:layout_marginTop="@dimen/QIBus_softui_bg_decrease10dp"
        android:gravity="center_horizontal"
        android:text="@string/English" />

    <Button
        android:id="@+id/b2ar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1en"
        android:layout_marginTop="@dimen/QIBus_softui_bg_decrease10dp"
        android:gravity="center_horizontal"
        android:text="@string/arabic" />


    <Button
        android:id="@+id/b3ka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b2ar"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Kurdish"
        android:visibility="visible" />


</RelativeLayout>