<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="@dimen/margin_300">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/QIBus_softui_spacing_xsmall"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/QIBus_softui_txt_todo"
                android:visibility="gone" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/QIBus_softui_img_icon"
                android:layout_gravity="center"
                android:visibility="gone" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView

                android:id="@+id/pickup_search_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/clear"
                android:layout_toRightOf="@+id/line3"
                android:background="@drawable/rounded_view"
                android:drawablePadding="@dimen/QIBus_softui_margin_32dp"

                android:hint="@string/pickup_location"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/QIBus_softui_spacing_large"
                android:textColor="@color/hint"
                android:textColorHint="@color/md_grey_200"
                android:textSize="@dimen/QIBus_softui_font_large"
                tools:ignore="RtlHardcoded" />

<!--            android:gravity="left"-->

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="0.2dp"
                android:background="@color/QIBus_softui_view_color" />

            <TextView

                android:id="@+id/search_drop_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/clear"
                android:layout_toRightOf="@+id/line3"
                android:background="@drawable/rounded_view"
                android:drawablePadding="@dimen/QIBus_softui_margin_32dp"
                android:hint="@string/drop_location"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/QIBus_softui_spacing_large"
                android:textColor="@color/hint"
                android:textColorHint="@color/md_grey_200"
                android:textSize="@dimen/QIBus_softui_font_large"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="horizontal"
            android:padding="1dp"
            android:scrollbars="vertical">


            <TextView
                android:id="@+id/Time_date_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/clear"
                android:layout_toRightOf="@+id/line3"
                android:background="@drawable/rounded_view"
                android:drawablePadding="@dimen/QIBus_softui_margin_32dp"
                android:hint="@string/Travel_time"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/QIBus_softui_spacing_large"
                android:textColor="@color/hint"
                android:textColorHint="@color/md_grey_200"
                android:textSize="@dimen/QIBus_softui_font_large"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/somoke_search"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_view"
                    android:gravity="center"
                    android:hint="@string/smoking"
                    android:padding="5dp"
                    android:textColorHint="@color/md_grey_200"
                    android:textSize="@dimen/QIBus_softui_font_large"
                    tools:ignore="RtlCompat,RtlHardcoded"
                    android:visibility="gone">

                </TextView>

                <TextView
                    android:id="@+id/passenger_search"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/passenger_one"
                    android:padding="5dp"
                    android:textColor="@color/hint"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/QIBus_softui_font_large"
                    tools:ignore="RtlCompat,RtlHardcoded"
                    android:visibility="gone">

                </TextView>


            </LinearLayout>

        </HorizontalScrollView>

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/search_for_users_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ronded_button1"
            android:text="@string/find_travel"
            android:tint="@color/white" />

        <Button

            android:id="@+id/ride_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/ronded_button1"
            android:contentDescription="@string/QIBus_softui_txt_todo"
            android:text="@string/add_travel"
            android:tint="@color/white" />

    </LinearLayout>


</LinearLayout>