<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:id="@+id/custom_real"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/QIBus_softui_spacing_medium"
        android:layout_marginEnd="@dimen/QIBus_softui_spacing_medium"
        android:layout_marginBottom="@dimen/QIBus_softui_spacing_medium"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/QIBus_softui_spacing_small"
        app:cardElevation="@dimen/QIBus_softui_card_shadow"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llOneWay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/QIBus_softui_spacing_large"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/QIBus_softui_spacing_large">


                <TextView
                    android:layout_marginTop="@dimen/QIBus_softui_spacing_xsmall"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/QIBus_softui_spacing_small"
                    android:text="@string/QIBus_softui_text_when_you_want_to_go"
                    android:textColor="@color/QIBus_softui_textChild"
                    android:textSize="@dimen/QIBus_softui_font_large" />
                <TextView
                    android:drawablePadding="@dimen/QIBus_softui_spacing_medium"
                    android:drawableStart="@drawable/ic_calendar_event_line"
                    android:id="@+id/edOneWay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_marginStart="@dimen/QIBus_softui_spacing_small"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/QIBus_softui_spacing_small"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/QIBus_softui_font_large"
                    android:layout_marginLeft="@dimen/QIBus_softui_spacing_small"
                    android:drawableLeft="@drawable/ic_calendar_event_line" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/QIBus_softui_img_icon"
                android:orientation="vertical"
                android:padding="@dimen/QIBus_softui_spacing_xsmall"
                android:layout_marginLeft="@dimen/QIBus_softui_img_icon">

                <ImageView
                    android:id="@+id/ivDescrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/QIBus_softui_txt_todo"
                    android:padding="@dimen/QIBus_softui_spacing_xsmall"
                    app:srcCompat="@drawable/ic_arrow_drop_up_black_24dp"
                    android:tint="@color/QIBus_softui_textChild" />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/QIBus_softui_spacing_small"
                    android:layout_marginEnd="@dimen/QIBus_softui_spacing_small"
                    android:drawableStart="@drawable/ic_seater"
                    android:text="@string/QIBus_softui__1"
                    android:textAlignment="center"
                    android:textColor="@color/QIBus_softui_textHeader"
                    android:textSize="@dimen/QIBus_softui_font_large"
                    android:drawableLeft="@drawable/ic_seater"
                    android:gravity="center_horizontal" />

                <ImageView
                    android:id="@+id/ivIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/QIBus_softui_txt_todo"
                    android:padding="@dimen/QIBus_softui_spacing_xsmall"
                    app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:tint="@color/QIBus_softui_icon_color" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/QIBus_softui_txt_todo"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_btn_shape"
                    android:padding="@dimen/QIBus_softui_spacing_25sdp"
                    app:srcCompat="@drawable/ic_search_2_line"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.design.card.MaterialCardView>

</RelativeLayout>